--- a/catswiper.html
+++ b/catswiper.html
@@ -9,8 +9,7 @@
                 height: 450px;
                 box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
                 margin-left: 10px;
-
-
+                display: inline-block;
             }
             .cat{
                 width: 300px;
@@ -44,10 +43,16 @@
                 margin-left: 10px;
 
             }
-
             .card:hover{
                 cursor: pointer;
             }
+            .friend:hover{
+                cursor: pointer;
+            }
+            .friend:active{
+                background-color: rgb(68, 142, 240);
+            }
+        
             
         </style>
     </head>
@@ -57,6 +62,22 @@
             <img class="cat" src="cat.jpg">
             <p class="name">Oliver</p>
             <p class="desc">2 mutual friends</p>
+            <button class="friend">Add Friend</button>
+
+        </div>
+
+        <div class="card">
+            <img class="cat" src="cat2.jpg">
+            <p class="name">Mimi</p>
+            <p class="desc">3 mutual friends</p>
+            <button class="friend">Add Friend</button>
+
+        </div>
+
+        <div class="card">
+            <img class="cat" src="cat3.jpg">
+            <p class="name">Rex</p>
+            <p class="desc">4 mutual friends</p>
             <button class="friend">Add Friend</button>
 
         </div>
